tests/transpiler/x/zig/group_items_iteration.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/group_items_iteration.zig:15:18: error: unable to infer array size
